<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.teikaiz.quiz.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/product_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.teikaiz.quiz.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.teikaiz.quiz.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.teikaiz.quiz.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/product_detail_fragment"
        android:name="com.teikaiz.quiz.ui.product.ProductDetailsFragment"
        />
</navigation>