<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddProductActivity">

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/product_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:text="@string/add_new_product"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
    />
    <EditText
        android:id="@+id/product_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_group_name"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:hint="@string/product_title"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/inputs"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_title"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:hint="@string/product_description"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/inputs"
        android:padding="20dp"
        />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_description"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:hint="@string/product_price"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/inputs"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/add_product"
        android:textColor="@android:color/white"
        />
</RelativeLayout>